@@ -2270,12 +2270,12 @@ int oracleGetImportColumn(oracleSession *session, char *schema, char **tabname, 
 	const char * const column_query =
 		"SELECT col.table_name, col.column_name, col.data_type, col.data_type_owner,\n"
 		"       col.char_length, col.data_precision, col.data_scale, col.nullable,\n"
-		"       CASE WHEN primkey_col.column_position IS NOT NULL THEN 1 ELSE 0 END AS primary_key\n"
+		"       CASE WHEN primkey_col.position IS NOT NULL THEN 1 ELSE 0 END AS primary_key\n"
 		"FROM all_tab_columns col,\n"
-		"     (SELECT con.table_name, ind.column_name, ind.column_position\n"
-		"      FROM all_constraints con, all_ind_columns ind\n"
-		"      WHERE con.owner = ind.table_owner AND con.table_name = ind.table_name\n"
-		"        AND con.index_owner = ind.index_owner AND con.index_name = ind.index_name\n"
+		"     (SELECT con.table_name, cons_col.column_name, cons_col.position\n"
+		"      FROM all_constraints con, all_cons_columns cons_col\n"
+		"      WHERE con.owner = cons_col.owner AND con.table_name = cons_col.table_name\n"
+		"        AND con.constraint_name = cons_col.constraint_name\n"
 		"        AND con.constraint_type = 'P' AND con.owner = :nsp) primkey_col\n"
 		"WHERE col.table_name = primkey_col.table_name(+) AND col.column_name = primkey_col.column_name(+)\n"
 		"  AND col.owner = :nsp\n"
