@@ -7,6 +7,8 @@ Version 1.5.0
     when now() or "current_timestamp" and friends or date/timestamp
     parameters were used.
     Report by Li Hailong.
+  - IMPORT FOREIGN SCHEMA sometimes didn't import primary keys.
+    Report by "JMLessard", fix by "legrandlegrand".
 
 Version 1.4.0, released 2016-04-08
   Enhancements:
